<resources>
    <string name="app_name">MyAndroidAPP</string>
    <!--<string name="title_activity_welcome"></string>?-->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="demo">This is the main page, we use it to demo.</string>
    <string name="title_activity_qrcode">QRCodeActivity</string>
    <string name="title_activity_qanswer">QAnswerActivity</string>
    <string name="title_activity_others">OthersActivity</string>
    <string name="title_activity_bills">BillsActivity</string>
    <string name="title_activity_pointshop">PointshopActivity</string>
    <string name="title_activity_goods_info">GoodsInfoActivity</string>
    <string name="title_activity_questionnaire_center">QuestionnaireCenterActivity</string>
    <string name="title_activity_qdoing">QDoingActivity</string>
    <string name="title_activity_qdone">QDoneActivity</string>
    <string name="title_activity_qcount">QCountActivity</string>
    <string name="change_psw">修改密码</string>
    <string name="my_info">我的信息</string>
    <string name="my_point">我的积分</string>
    <string name="my_bind">我的绑定</string>
    <string name="address">收货地址</string>
    <string name="feedback">问题反馈</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="drawer_right_tip_no_login">未登录</string>
    <string name="drawer_right_logout_hint_text">"登录后 可关注好友评论和收藏"</string>
    <string name="eg_return">返回</string>
    <string name="eg_name">Name</string>
    <string name="eg_info">勺一勺上面的二维码，加我为好友</string>
    <string name="my_friend">我的问友</string>
    <string name="question_name">问卷名称</string>
    <string name="question_type">问卷类型</string>
    <string name="question_pointd">500</string>
    <string name="question_state">0/100</string>
    <string name="go_on">继续</string>
    <string name="wramming_available_question">可参与的问卷</string>
    <string name="wramming_points">积分</string>
    <string name="wramming_state">状态</string>
    <string name="wramming_cash">现金</string>
    <string name="useless_point1">888888</string>
    <string name="state_done">完成</string>
    <string name="state_underchecking">正在审核</string>
    <string name="state_doing">未完成</string>
    <string name="check_out">查看</string>
    <string name="questionnaire_doing">进行中问卷</string>
    <string name="questionnaire_doone">已完成问卷</string>
    <string name="questionnaire_count">问卷统计</string>
    <string name="main_page">首页</string>
    <string name="questio_center">问卷中心</string>
    <string name="points_shop">积分商城</string>
    <string name="others">精彩推送</string>
    <string name="answer_qustion">答题</string>
    <string name="bills_points_center">账单</string>
    <string name="useless_ads">活动推广</string>
    <string name="useless_points2">5000 积分</string>
    <string name="good_info1">（市场参考价：50￥）</string>
    <string name="goood_exchange">兑换</string>
    <string name="points_filter">积分筛选</string>
    <string name="good_info2">兑换编号:88888</string>
    <string name="goods_description">商品描述</string>
    <string name="goods_price_params">价格参数</string>
    <string name="want_exchange">我要兑换</string>
    <string name="bills_in_details">账单明细</string>

    <!--下面是我找的淼哥负责部分的string-->
    <string name="title_activity_my_points">MyPointsActivity</string>
    <string name="mypoints_profit">累计收益</string>
    <string name="mypoints_real_profit">8888</string>
    <string name="title_activity_my_poing_profit">MyPoingProfitActivity</string>
    <string name="mypoints_date">日期</string>
    <string name="mypoints_comefrom">来源</string>
    <string name="mypoints_my_profit">我的所得</string>
    <string name="mypoints_use">用途</string>
    <string name="title_activity_my_points_spending">MyPointsSpendingActivity</string>
    <string name="title_activity_my_binding">MyBindingActivity</string>
    <string name="mybinding_phone_number">手机号</string>
    <string name="mybinding_verify_code">验证码</string>
    <string name="mybinding_get_verify_code">获取验证码</string>
    <string name="mybinding_email">邮箱</string>
    <string name="mybinding_confirm_bankcardnum">银行卡号</string>
    <string name="register">注册</string>
    <string name="title_activity_binding_card">BindingCardActivity</string>
    <string name="bindingCards_next">下一步</string>
    <string name="title_activity_bind_cards_info">BindCardsInfoActivity</string>
    <string name="bindCardInfo_bank_name">XXX银行（储蓄卡）</string>
    <string name="bindCardInfo_card_account">XXXX XXXX XXXX XXXX</string>
    <string name="bindCardInfo_username">X欣</string>
    <string name="bindCardInfo_eg_username">姓名</string>
    <string name="bindCardInfo_useridentity">1100XXXXXXXXX1100</string>
    <string name="bindCardInfo_eg_useridentity">身份证</string>
    <string name="bindCardInfo_userphone_num">187XXXX0001</string>
    <string name="bindCardInfo_eg_userphone_num">手机号</string>
    <string name="bindCardInfo_comfire_bind">验证并绑定</string>
    <string name="title_activity_question_feedback">QuestionFeedbackActivity</string>
    <string name="question_feedback_tips">欢迎提交建议和意见，我们的进步离不开您的反馈</string>
    <string name="question_feedback_tips_in_edit">请输入您的意见，我们将为您不断改进和提高</string>
    <string name="question_feedback_hand_in">提交</string>
    <string name="title_activity_my_question_friends">MyQuestionFriendsActivity</string>
    <string name="myQuestionFirends_name">Name</string>
    <string name="myQuestionFriends_city">北京</string>
    <string name="myQuestionFriends_sex">男</string>
    <string name="myQuestionFriends_send_points">赠送积分</string>
    <string name="title_activity_receive_address">ReceiveAddressActivity</string>
    <string name="receive_address_name">王颖</string>
    <string name="receive_address_phone_num">18700000001</string>
    <string name="receive_address_address">北京市朝阳区望京悠乐汇d座311</string>
    <string name="receive_address_address_edit">编辑</string>
    <string name="receive_address_address_delete">删除</string>
    <string name="receive_address_default_addredss">默认地址</string>
    <string name="receive_address_default_addredss_space" />
    <string name="receive_address_add_new_address">添加新地址</string>
    <string name="add_new_address_receiver_name">收货人:</string>
    <string name="add_new_address_tips">新增地址</string>
    <string name="add_new_address_receiver_name_eg">王颖</string>
    <string name="add_new_address_address_info">收货地址:</string>
    <string name="add_new_address_receiver_province_eg">北京</string>
    <string name="add_new_address_receiver_city_eg">北京市</string>
    <string name="add_new_address_receiver_area_eg">朝阳区</string>
    <string name="add_new_address_receiver_street_eg">望京街道</string>
    <string name="add_new_address_receiver_address_in_details">详细地址:</string>
    <string name="add_new_address_receiver_address_eg">悠乐汇A座627</string>
    <string name="add_new_address_receiver_phone_num">手机:</string>
    <string name="add_new_address_receiver_phone_num_eg">18700000001</string>
    <string name="add_new_address_default_address">设置默认地址</string>
    <string name="add_new_address_yes">确定</string>
    <string name="add_new_address_no">取消</string>
    <string name="title_activity_change_info">ChangeInfoActivity</string>

    <!--这里是开始整合的时候用到的string，也就是从你那里拷过来的-->
    <string name="age">年龄</string>
    <string name="title_activity_change_psw">ChangePswActivity</string>
    <string name="input_old_psw">输入旧密码</string>
    <string name="input_new_psw">输入新密码</string>
    <string name="confirm_new_psw">确认新密码</string>
    <string name="change">修改</string>
    <string name="title_activity_find_psw">FindPswActivity</string>
    <string name="send_verify_code">请向您手机号发送验证码</string>
    <string name="verify_code">验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认密码</string>
    <string name="confirm">确认</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="remember_password">记住密码</string>
    <string name="i_forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="setting_night_mode">夜间模式</string>
    <string name="setting_list_mode">列表显示摘要</string>
    <string name="setting_font_size">字体大小</string>
    <string name="setting_list_comment">列表页评论</string>
    <string name="setting_refresh_list">列表页刷新</string>
    <string name="setting_load_image">2G/3G网络流量</string>
    <string name="setting_clear">清理缓存</string>
    <string name="setting_notify">推送通知</string>
    <string name="setting_interactive">互动插件</string>
    <string name="setting_use_swipe">左右翻页</string>
    <string name="setting_close_shake_hand">关闭摇一摇切换夜间模式</string>
    <string name="setting_share_when_favor">收藏时转发</string>
    <string name="setting_share_when_diggbury">顶踩时转发</string>
    <string name="setting_update">检查新版本</string>
    <string name="setting_recommend">精彩应用推荐</string>
    <string name="setting_switch_domain">启动网络调试</string>
    <string name="setting_use_help">使用帮助</string>
    <string name="app_copyright">© 头条网 toutiao.com</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="point">积分：</string>
    <string name="exchange">兑换礼物</string>
    <string name="cash">现金：</string>
    <string name="cash_in">提取现金</string>
    <string name="my_creadit_card">我的银行卡：</string>
    <string name="my_phone_number">我的手机号：</string>
    <string name="point_detail">积分详情</string>
    <string name="questionnaire_center">问卷中心</string>
    <string name="point_shop">积分商城</string>
    <string name="push">精选推送</string>
    <string name="sex">性别</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="education">学历</string>
    <string name="occupation">职业</string>
    <string name="likeDrinking">是否饮酒</string>
    <string name="drinking">是否饮酒</string>
    <string name="likeSmoking">是否抽烟</string>
    <string name="isThereFamliyDisease">是否有家族遗传病</string>
    <string name="isThereDisease">是否有疾病史</string>
    <string name="income">收入情况</string>
    <string name="LBS">LBS</string>

    <!--再次补充-->
    <string name="exchange_num">购买数目</string>
    <string name="exchange_succcess">兑换成功</string>
    <string name="exchange_goodsName">商品名称</string>
    <string name="exchange_money">花费-500积分</string>
    <string name="point_shop_search">在商场中搜索</string>
</resources>
