<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#969696"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/add_new_address_tips"/>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/add_new_address_receiver_name"/>

        <EditText
            android:id="@+id/alertDialogAddAddressEditReceiverName"
            android:background="@drawable/rectangle_corner_input"
            android:layout_marginLeft="20dp"
            android:hint="@string/add_new_address_receiver_name_eg"
            android:layout_width="200dp"
            android:textSize="15dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/add_new_address_address_info"/>

        <EditText
            android:id="@+id/alertDialogAddAddressEditReceiverProvince"
            android:background="@drawable/rectangle_corner_input"
            android:layout_marginLeft="5dp"
            android:textSize="15dp"
            android:hint="@string/add_new_address_receiver_province_eg"
            android:layout_width="60dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/alertDialogAddAddressEditReceiverCity"
            android:textSize="15dp"
            android:background="@drawable/rectangle_corner_input"
            android:layout_marginLeft="5dp"
            android:hint="@string/add_new_address_receiver_city_eg"
            android:layout_width="70dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/alertDialogAddAddressEditReceiverArea"
            android:textSize="15dp"
            android:background="@drawable/rectangle_corner_input"
            android:layout_marginLeft="5dp"
            android:hint="@string/add_new_address_receiver_area_eg"
            android:layout_width="70dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/alertDialogAddAddressEditReceiverStreet"
            android:textSize="15dp"
            android:background="@drawable/rectangle_corner_input"
            android:layout_marginLeft="5dp"
            android:hint="@string/add_new_address_receiver_street_eg"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/add_new_address_receiver_address_in_details"/>

        <EditText
            android:id="@+id/alertDialogAddAddressEditReceiverAddressInDetails"
            android:background="@drawable/rectangle_corner_input"
            android:layout_marginLeft="5dp"
            android:hint="@string/add_new_address_receiver_address_eg"
            android:layout_width="200dp"
            android:textSize="15dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/add_new_address_receiver_phone_num"/>

        <EditText
            android:id="@+id/alertDialogAddAddressEditReceiverPhoneNum"
            android:background="@drawable/rectangle_corner_input"
            android:layout_marginLeft="35dp"
            android:hint="@string/add_new_address_receiver_phone_num_eg"
            android:layout_width="200dp"
            android:textSize="15dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <CheckBox
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_address_default_address"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/alertDialogAddAddressButtonYes"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/add_new_address_yes"
            android:textColor="#fff"
            android:textSize="18dp"
            android:background="@drawable/round_corner_red"/>

        <Button
            android:layout_marginLeft="10dp"
            android:id="@+id/alertDialogAddAddressButtonNo"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="#fff"
            android:textSize="18dp"
            android:background="@drawable/round_corner_gray"
            android:text="@string/add_new_address_no"/>


    </LinearLayout>




</LinearLayout>
