<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.example.xue2015.myandroidapp.util.TitleLayout
        android:id="@+id/findPswActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/send_verify_code"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:weightSum="5" >

            <EditText
                android:id="@+id/editFindPswVeriCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/round_corner_inputbox"
                android:hint="@string/verify_code" />

            <Button
                android:id="@+id/buttonFindPswGetVeriCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/round_corner_blue"
                android:layout_weight="2"
                android:text="@string/get_verify_code" />
        </LinearLayout>

        <EditText
            android:id="@+id/editFindPswPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corner_inputbox"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/editFindPswConfirmPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_corner_inputbox"
            android:ems="10"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonFindPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_corner_blue"
            android:layout_marginTop="10dp"
            android:onClick="onClickFindPsw"
            android:text="@string/confirm" />
    </LinearLayout>

</LinearLayout>