<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.topnews.ChangeInfoActivity" >

    <com.example.xue2015.myandroidapp.Titlebar
        android:id="@+id/changeInfoActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="13"
        tools:context="com.topnews.ChangeInfoActivity" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/age"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/sex"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/height"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/weight"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/education"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/occupation"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/likeDrinking"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/likeSmoking"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="8"
            android:text="@string/isThereFamliyDisease"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="9"
            android:text="@string/isThereDisease"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="10"
            android:text="@string/income"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="11"
            android:text="@string/LBS"
            android:textSize="15sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="11" />



    </GridLayout>



</LinearLayout>