<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.example.xue2015.myandroidapp.util.TitleLayout
        android:id="@+id/loginActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:weightSum="9" >

        <EditText
            android:id="@+id/editLoginPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_inputbox"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editLoginPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_inputbox"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkBoxIsRemPsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="4"
            android:text="@string/remember_password" />

        <Button
            android:id="@+id/buttonLogin"
            android:background="@drawable/round_corner_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick="onClickLogin"
            android:text="@string/login" />

        <TextView
            android:id="@+id/iForgetMyPsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onClickIForgetMyPsw"
            android:text="@string/i_forget_password" />
    </LinearLayout>

</LinearLayout>